Update bi-lstm with embeddings.ipynb

--- a/bi-lstm with embeddings.ipynb
+++ b/bi-lstm with embeddings.ipynb
@@ -1685,7 +1685,7 @@
     "        for p in pred_i:\n",
     "            for k,v in tags_nd.items():\n",
     "                if v==list(p):\n",
-    "                    out_i.append(idx2tag[k])\n",
+    "                    out_i.append(k)\n",
     "        out.append(out_i)\n",
     "    return out\n",
     "    \n",
